<resources>
    <string name="app_name">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_hint">Title</string>
    <string name="content_hint">Content</string>
    <string name="search_hint">Search notes…</string>
    <string name="empty_notes">No notes found.</string>
    <string name="title_note_edit">Edit Note</string>
    <string name="title_note_detail">Note</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="lbl_created">Created:</string>
    <string name="lbl_updated">Updated:</string>
</resources>
